exports[`test Child node 1`] = `
"<div class=\"pe-toolbar\">
  <a class=\"pe-button pe-icon-button\" tabindex=\"0\">
  <div class=\"pe-button__content\">
    <div class=\"pe-ripple\"></div>
    <div class=\"pe-button__focus\"></div>
    <div class=\"pe-icon-button__content\">
      <div class=\"pe-icon pe-icon--regular\">
        <div class=\"pe-svg\">
          <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
          focusable=\"false\">
            <path d=
            \"M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z\"></path>
          </svg>
        </div>
      </div>
    </div>
  </div></a>
  <div class=\"pe-toolbar__title\">
    Toolbar with a very very very very very very very very very
    long title
  </div><a class=\"pe-button pe-icon-button\" tabindex=\"0\">
  <div class=\"pe-button__content\">
    <div class=\"pe-ripple\"></div>
    <div class=\"pe-button__focus\"></div>
    <div class=\"pe-icon-button__content\">
      <div class=\"pe-icon pe-icon--regular\">
        <div class=\"pe-svg\">
          <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
          focusable=\"false\">
            <path d=
            \"M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z\">
            </path>
          </svg>
        </div>
      </div>
    </div>
  </div></a><a class=\"pe-button pe-icon-button\" tabindex=\"0\">
  <div class=\"pe-button__content\">
    <div class=\"pe-ripple\"></div>
    <div class=\"pe-button__focus\"></div>
    <div class=\"pe-icon-button__content\">
      <div class=\"pe-icon pe-icon--regular\">
        <div class=\"pe-svg\">
          <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
          focusable=\"false\">
            <path d=\"M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z\"></path>
          </svg>
        </div>
      </div>
    </div>
  </div></a>
</div>
"
`;

exports[`test Dark tone class + light tone 1`] = `
"<div class=\"pe-toolbar pe-light-tone\">
  <a class=\"pe-button pe-icon-button\" tabindex=\"0\">
  <div class=\"pe-button__content\">
    <div class=\"pe-ripple\"></div>
    <div class=\"pe-button__focus\"></div>
    <div class=\"pe-icon-button__content\">
      <div class=\"pe-icon pe-icon--regular\">
        <div class=\"pe-svg\">
          <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
          focusable=\"false\">
            <path d=
            \"M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z\"></path>
          </svg>
        </div>
      </div>
    </div>
  </div></a>
  <div class=\"pe-toolbar__title\">
    Toolbar with a very very very very very very very very very
    long title
  </div><a class=\"pe-button pe-icon-button\" tabindex=\"0\">
  <div class=\"pe-button__content\">
    <div class=\"pe-ripple\"></div>
    <div class=\"pe-button__focus\"></div>
    <div class=\"pe-icon-button__content\">
      <div class=\"pe-icon pe-icon--regular\">
        <div class=\"pe-svg\">
          <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
          focusable=\"false\">
            <path d=
            \"M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z\">
            </path>
          </svg>
        </div>
      </div>
    </div>
  </div></a><a class=\"pe-button pe-icon-button\" tabindex=\"0\">
  <div class=\"pe-button__content\">
    <div class=\"pe-ripple\"></div>
    <div class=\"pe-button__focus\"></div>
    <div class=\"pe-icon-button__content\">
      <div class=\"pe-icon pe-icon--regular\">
        <div class=\"pe-svg\">
          <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
          focusable=\"false\">
            <path d=\"M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z\"></path>
          </svg>
        </div>
      </div>
    </div>
  </div></a>
</div>
"
`;

exports[`test Dark tone class + light tone class 1`] = `
"<div class=\"pe-toolbar pe-light-tone\">
  <a class=\"pe-button pe-icon-button\" tabindex=\"0\">
  <div class=\"pe-button__content\">
    <div class=\"pe-ripple\"></div>
    <div class=\"pe-button__focus\"></div>
    <div class=\"pe-icon-button__content\">
      <div class=\"pe-icon pe-icon--regular\">
        <div class=\"pe-svg\">
          <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
          focusable=\"false\">
            <path d=
            \"M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z\"></path>
          </svg>
        </div>
      </div>
    </div>
  </div></a>
  <div class=\"pe-toolbar__title\">
    Toolbar with a very very very very very very very very very
    long title
  </div><a class=\"pe-button pe-icon-button\" tabindex=\"0\">
  <div class=\"pe-button__content\">
    <div class=\"pe-ripple\"></div>
    <div class=\"pe-button__focus\"></div>
    <div class=\"pe-icon-button__content\">
      <div class=\"pe-icon pe-icon--regular\">
        <div class=\"pe-svg\">
          <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
          focusable=\"false\">
            <path d=
            \"M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z\">
            </path>
          </svg>
        </div>
      </div>
    </div>
  </div></a><a class=\"pe-button pe-icon-button\" tabindex=\"0\">
  <div class=\"pe-button__content\">
    <div class=\"pe-ripple\"></div>
    <div class=\"pe-button__focus\"></div>
    <div class=\"pe-icon-button__content\">
      <div class=\"pe-icon pe-icon--regular\">
        <div class=\"pe-svg\">
          <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
          focusable=\"false\">
            <path d=\"M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z\"></path>
          </svg>
        </div>
      </div>
    </div>
  </div></a>
</div>
"
`;

exports[`test No options 1`] = `
"<div class="pe-toolbar"></div>
"
`;

exports[`test Option: class 1`] = `
"<div class="pe-toolbar class-x"></div>
"
`;

exports[`test Option: className 1`] = `
"<div class="pe-toolbar className-x"></div>
"
`;

exports[`test Option: compact 1`] = `
"<div class=\"pe-toolbar pe-toolbar--compact\">
  <a class=\"pe-button pe-icon-button\" tabindex=\"0\">
  <div class=\"pe-button__content\">
    <div class=\"pe-ripple\"></div>
    <div class=\"pe-button__focus\"></div>
    <div class=\"pe-icon-button__content\">
      <div class=\"pe-icon pe-icon--regular\">
        <div class=\"pe-svg\">
          <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
          focusable=\"false\">
            <path d=
            \"M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z\"></path>
          </svg>
        </div>
      </div>
    </div>
  </div></a>
  <div class=\"pe-toolbar__title\">
    Toolbar with a very very very very very very very very very
    long title
  </div><a class=\"pe-button pe-icon-button\" tabindex=\"0\">
  <div class=\"pe-button__content\">
    <div class=\"pe-ripple\"></div>
    <div class=\"pe-button__focus\"></div>
    <div class=\"pe-icon-button__content\">
      <div class=\"pe-icon pe-icon--regular\">
        <div class=\"pe-svg\">
          <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
          focusable=\"false\">
            <path d=
            \"M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z\">
            </path>
          </svg>
        </div>
      </div>
    </div>
  </div></a><a class=\"pe-button pe-icon-button\" tabindex=\"0\">
  <div class=\"pe-button__content\">
    <div class=\"pe-ripple\"></div>
    <div class=\"pe-button__focus\"></div>
    <div class=\"pe-icon-button__content\">
      <div class=\"pe-icon pe-icon--regular\">
        <div class=\"pe-svg\">
          <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
          focusable=\"false\">
            <path d=\"M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z\"></path>
          </svg>
        </div>
      </div>
    </div>
  </div></a>
</div>
"
`;

exports[`test Option: content -- dark tone class 1`] = `
"<div class=\"pe-toolbar\">
  <a class=\"pe-button pe-icon-button\" tabindex=\"0\">
  <div class=\"pe-button__content\">
    <div class=\"pe-ripple\"></div>
    <div class=\"pe-button__focus\"></div>
    <div class=\"pe-icon-button__content\">
      <div class=\"pe-icon pe-icon--regular\">
        <div class=\"pe-svg\">
          <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
          focusable=\"false\">
            <path d=
            \"M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z\"></path>
          </svg>
        </div>
      </div>
    </div>
  </div></a>
  <div class=\"pe-toolbar__title\">
    Toolbar with a very very very very very very very very very
    long title
  </div><a class=\"pe-button pe-icon-button\" tabindex=\"0\">
  <div class=\"pe-button__content\">
    <div class=\"pe-ripple\"></div>
    <div class=\"pe-button__focus\"></div>
    <div class=\"pe-icon-button__content\">
      <div class=\"pe-icon pe-icon--regular\">
        <div class=\"pe-svg\">
          <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
          focusable=\"false\">
            <path d=
            \"M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z\">
            </path>
          </svg>
        </div>
      </div>
    </div>
  </div></a><a class=\"pe-button pe-icon-button\" tabindex=\"0\">
  <div class=\"pe-button__content\">
    <div class=\"pe-ripple\"></div>
    <div class=\"pe-button__focus\"></div>
    <div class=\"pe-icon-button__content\">
      <div class=\"pe-icon pe-icon--regular\">
        <div class=\"pe-svg\">
          <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
          focusable=\"false\">
            <path d=\"M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z\"></path>
          </svg>
        </div>
      </div>
    </div>
  </div></a>
</div>
"
`;

exports[`test Option: content 1`] = `
"<div class=\"pe-toolbar\">
  <a class=\"pe-button pe-icon-button\" tabindex=\"0\">
  <div class=\"pe-button__content\">
    <div class=\"pe-ripple\"></div>
    <div class=\"pe-button__focus\"></div>
    <div class=\"pe-icon-button__content\">
      <div class=\"pe-icon pe-icon--regular\">
        <div class=\"pe-svg\">
          <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
          focusable=\"false\">
            <path d=
            \"M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z\"></path>
          </svg>
        </div>
      </div>
    </div>
  </div></a>
  <div class=\"pe-toolbar__title\">
    Toolbar with a very very very very very very very very very
    long title
  </div><a class=\"pe-button pe-icon-button\" tabindex=\"0\">
  <div class=\"pe-button__content\">
    <div class=\"pe-ripple\"></div>
    <div class=\"pe-button__focus\"></div>
    <div class=\"pe-icon-button__content\">
      <div class=\"pe-icon pe-icon--regular\">
        <div class=\"pe-svg\">
          <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
          focusable=\"false\">
            <path d=
            \"M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z\">
            </path>
          </svg>
        </div>
      </div>
    </div>
  </div></a><a class=\"pe-button pe-icon-button\" tabindex=\"0\">
  <div class=\"pe-button__content\">
    <div class=\"pe-ripple\"></div>
    <div class=\"pe-button__focus\"></div>
    <div class=\"pe-icon-button__content\">
      <div class=\"pe-icon pe-icon--regular\">
        <div class=\"pe-svg\">
          <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
          focusable=\"false\">
            <path d=\"M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z\"></path>
          </svg>
        </div>
      </div>
    </div>
  </div></a>
</div>
"
`;

exports[`test Option: element 1`] = `
"<a class="pe-toolbar"></a>
"
`;

exports[`test Option: id 1`] = `
"<div id="id-x" class="pe-toolbar"></div>
"
`;

exports[`test Option: style (colors and height) 1`] = `
"<div style=
\"background-color: rgb(239, 108, 0); color: rgb(255, 255, 255); height: 72px;\"
class=\"pe-toolbar\">
  <a class=\"pe-button pe-icon-button\" tabindex=\"0\">
  <div class=\"pe-button__content\">
    <div class=\"pe-ripple\"></div>
    <div class=\"pe-button__focus\"></div>
    <div class=\"pe-icon-button__content\">
      <div class=\"pe-icon pe-icon--regular\">
        <div class=\"pe-svg\">
          <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
          focusable=\"false\">
            <path d=
            \"M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z\"></path>
          </svg>
        </div>
      </div>
    </div>
  </div></a>
  <div class=\"pe-toolbar__title\">
    Toolbar with a very very very very very very very very very
    long title
  </div><a class=\"pe-button pe-icon-button\" tabindex=\"0\">
  <div class=\"pe-button__content\">
    <div class=\"pe-ripple\"></div>
    <div class=\"pe-button__focus\"></div>
    <div class=\"pe-icon-button__content\">
      <div class=\"pe-icon pe-icon--regular\">
        <div class=\"pe-svg\">
          <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
          focusable=\"false\">
            <path d=
            \"M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z\">
            </path>
          </svg>
        </div>
      </div>
    </div>
  </div></a><a class=\"pe-button pe-icon-button\" tabindex=\"0\">
  <div class=\"pe-button__content\">
    <div class=\"pe-ripple\"></div>
    <div class=\"pe-button__focus\"></div>
    <div class=\"pe-icon-button__content\">
      <div class=\"pe-icon pe-icon--regular\">
        <div class=\"pe-svg\">
          <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
          focusable=\"false\">
            <path d=\"M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z\"></path>
          </svg>
        </div>
      </div>
    </div>
  </div></a>
</div>
"
`;

exports[`test Shadow 1`] = `
"<div style=\"position: relative;\">
  <div class=\"pe-toolbar\">
    <a class=\"pe-button pe-icon-button\" tabindex=\"0\">
    <div class=\"pe-button__content\">
      <div class=\"pe-ripple\"></div>
      <div class=\"pe-button__focus\"></div>
      <div class=\"pe-icon-button__content\">
        <div class=\"pe-icon pe-icon--regular\">
          <div class=\"pe-svg\">
            <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
            focusable=\"false\">
              <path d=
              \"M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z\"></path>
            </svg>
          </div>
        </div>
      </div>
    </div></a>
    <div class=\"pe-toolbar__title\">
      Toolbar with a very very very very very very very very very
      long title
    </div><a class=\"pe-button pe-icon-button\" tabindex=\"0\">
    <div class=\"pe-button__content\">
      <div class=\"pe-ripple\"></div>
      <div class=\"pe-button__focus\"></div>
      <div class=\"pe-icon-button__content\">
        <div class=\"pe-icon pe-icon--regular\">
          <div class=\"pe-svg\">
            <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
            focusable=\"false\">
              <path d=
              \"M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z\">
              </path>
            </svg>
          </div>
        </div>
      </div>
    </div></a><a class=\"pe-button pe-icon-button\" tabindex=\"0\">
    <div class=\"pe-button__content\">
      <div class=\"pe-ripple\"></div>
      <div class=\"pe-button__focus\"></div>
      <div class=\"pe-icon-button__content\">
        <div class=\"pe-icon pe-icon--regular\">
          <div class=\"pe-svg\">
            <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
            focusable=\"false\">
              <path d=\"M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z\"></path>
            </svg>
          </div>
        </div>
      </div>
    </div></a>
  </div>
  <div class=\"pe-shadow\">
    <div class=\"pe-shadow__bottom pe-shadow--z-1\"></div>
    <div class=\"pe-shadow__top pe-shadow--z-1\"></div>
  </div>
</div>
"
`;

exports[`test Themed (dark tone) 1`] = `
"<div class=\"pe-toolbar pe-dark-tone tests-toolbar-themed-toolbar\">
  <a class=\"pe-button pe-icon-button\" tabindex=\"0\">
  <div class=\"pe-button__content\">
    <div class=\"pe-ripple\"></div>
    <div class=\"pe-button__focus\"></div>
    <div class=\"pe-icon-button__content\">
      <div class=\"pe-icon pe-icon--regular\">
        <div class=\"pe-svg\">
          <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
          focusable=\"false\">
            <path d=
            \"M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z\"></path>
          </svg>
        </div>
      </div>
    </div>
  </div></a>
  <div class=\"pe-toolbar__title\">
    Toolbar with a very very very very very very very very very
    long title
  </div><a class=\"pe-button pe-icon-button\" tabindex=\"0\">
  <div class=\"pe-button__content\">
    <div class=\"pe-ripple\"></div>
    <div class=\"pe-button__focus\"></div>
    <div class=\"pe-icon-button__content\">
      <div class=\"pe-icon pe-icon--regular\">
        <div class=\"pe-svg\">
          <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
          focusable=\"false\">
            <path d=
            \"M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z\">
            </path>
          </svg>
        </div>
      </div>
    </div>
  </div></a><a class=\"pe-button pe-icon-button\" tabindex=\"0\">
  <div class=\"pe-button__content\">
    <div class=\"pe-ripple\"></div>
    <div class=\"pe-button__focus\"></div>
    <div class=\"pe-icon-button__content\">
      <div class=\"pe-icon pe-icon--regular\">
        <div class=\"pe-svg\">
          <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
          focusable=\"false\">
            <path d=\"M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z\"></path>
          </svg>
        </div>
      </div>
    </div>
  </div></a>
</div>
"
`;

exports[`test Themed -- dark tone class 1`] = `
"<div class=\"pe-toolbar tests-toolbar-themed-toolbar\">
  <a class=\"pe-button pe-icon-button\" tabindex=\"0\">
  <div class=\"pe-button__content\">
    <div class=\"pe-ripple\"></div>
    <div class=\"pe-button__focus\"></div>
    <div class=\"pe-icon-button__content\">
      <div class=\"pe-icon pe-icon--regular\">
        <div class=\"pe-svg\">
          <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
          focusable=\"false\">
            <path d=
            \"M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z\"></path>
          </svg>
        </div>
      </div>
    </div>
  </div></a>
  <div class=\"pe-toolbar__title\">
    Toolbar with a very very very very very very very very very
    long title
  </div><a class=\"pe-button pe-icon-button\" tabindex=\"0\">
  <div class=\"pe-button__content\">
    <div class=\"pe-ripple\"></div>
    <div class=\"pe-button__focus\"></div>
    <div class=\"pe-icon-button__content\">
      <div class=\"pe-icon pe-icon--regular\">
        <div class=\"pe-svg\">
          <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
          focusable=\"false\">
            <path d=
            \"M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z\">
            </path>
          </svg>
        </div>
      </div>
    </div>
  </div></a><a class=\"pe-button pe-icon-button\" tabindex=\"0\">
  <div class=\"pe-button__content\">
    <div class=\"pe-ripple\"></div>
    <div class=\"pe-button__focus\"></div>
    <div class=\"pe-icon-button__content\">
      <div class=\"pe-icon pe-icon--regular\">
        <div class=\"pe-svg\">
          <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
          focusable=\"false\">
            <path d=\"M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z\"></path>
          </svg>
        </div>
      </div>
    </div>
  </div></a>
</div>
"
`;

exports[`test Title as span 1`] = `
"<div class=\"pe-toolbar\">
  <a class=\"pe-button pe-icon-button\" tabindex=\"0\">
  <div class=\"pe-button__content\">
    <div class=\"pe-ripple\"></div>
    <div class=\"pe-button__focus\"></div>
    <div class=\"pe-icon-button__content\">
      <div class=\"pe-icon pe-icon--regular\">
        <div class=\"pe-svg\">
          <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
          focusable=\"false\">
            <path d=
            \"M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z\"></path>
          </svg>
        </div>
      </div>
    </div>
  </div></a><span>Toolbar with a very very very long
  title</span><a class=\"pe-button pe-icon-button\" tabindex=\"0\">
  <div class=\"pe-button__content\">
    <div class=\"pe-ripple\"></div>
    <div class=\"pe-button__focus\"></div>
    <div class=\"pe-icon-button__content\">
      <div class=\"pe-icon pe-icon--regular\">
        <div class=\"pe-svg\">
          <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
          focusable=\"false\">
            <path d=\"M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z\"></path>
          </svg>
        </div>
      </div>
    </div>
  </div></a>
</div>
"
`;

exports[`test Title as span, indented (without left icon) 1`] = `
"<div class=\"pe-toolbar\">
  <div class=\"pe-toolbar__title--indent\">
    Indented title
  </div><a class=\"pe-button pe-icon-button\" tabindex=\"0\">
  <div class=\"pe-button__content\">
    <div class=\"pe-ripple\"></div>
    <div class=\"pe-button__focus\"></div>
    <div class=\"pe-icon-button__content\">
      <div class=\"pe-icon pe-icon--regular\">
        <div class=\"pe-svg\">
          <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
          focusable=\"false\">
            <path d=\"M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z\"></path>
          </svg>
        </div>
      </div>
    </div>
  </div></a>
</div>
"
`;

exports[`test ToolbarTitle 1`] = `
"<div class=\"pe-toolbar\">
  <a class=\"pe-button pe-icon-button\" tabindex=\"0\">
  <div class=\"pe-button__content\">
    <div class=\"pe-ripple\"></div>
    <div class=\"pe-button__focus\"></div>
    <div class=\"pe-icon-button__content\">
      <div class=\"pe-icon pe-icon--regular\">
        <div class=\"pe-svg\">
          <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
          focusable=\"false\">
            <path d=
            \"M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z\"></path>
          </svg>
        </div>
      </div>
    </div>
  </div></a>
  <div class=\"pe-toolbar__title\">
    Toolbar with a very very very long title
  </div><a class=\"pe-button pe-icon-button\" tabindex=\"0\">
  <div class=\"pe-button__content\">
    <div class=\"pe-ripple\"></div>
    <div class=\"pe-button__focus\"></div>
    <div class=\"pe-icon-button__content\">
      <div class=\"pe-icon pe-icon--regular\">
        <div class=\"pe-svg\">
          <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
          focusable=\"false\">
            <path d=\"M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z\"></path>
          </svg>
        </div>
      </div>
    </div>
  </div></a>
</div>
"
`;

exports[`test ToolbarTitle, at start 1`] = `
"<div class=\"pe-toolbar\">
  <div class=\"pe-toolbar__title\">
    Toolbar with a very very very long title
  </div><a class=\"pe-button pe-icon-button\" tabindex=\"0\">
  <div class=\"pe-button__content\">
    <div class=\"pe-ripple\"></div>
    <div class=\"pe-button__focus\"></div>
    <div class=\"pe-icon-button__content\">
      <div class=\"pe-icon pe-icon--regular\">
        <div class=\"pe-svg\">
          <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
          focusable=\"false\">
            <path d=\"M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z\"></path>
          </svg>
        </div>
      </div>
    </div>
  </div></a>
</div>
"
`;

exports[`test ToolbarTitle, centered 1`] = `
"<div class=\"pe-toolbar\">
  <div class=\"pe-toolbar__title pe-toolbar__title--center\">
    Toolbar with a very very very long title
  </div>
</div>
"
`;

exports[`test ToolbarTitle, centered, balanced with a placeholder 1`] = `
"<div class=\"pe-toolbar\">
  <a class=\"pe-button pe-icon-button\" tabindex=\"0\">
  <div class=\"pe-button__content\">
    <div class=\"pe-ripple\"></div>
    <div class=\"pe-button__focus\"></div>
    <div class=\"pe-icon-button__content\">
      <div class=\"pe-icon pe-icon--regular\">
        <div class=\"pe-svg\">
          <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
          focusable=\"false\">
            <path d=
            \"M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z\"></path>
          </svg>
        </div>
      </div>
    </div>
  </div></a>
  <div class=\"pe-toolbar__title pe-toolbar__title--center\">
    Toolbar with a very very very long title
  </div><a class=\"pe-button pe-icon-button pe-button--inactive\">
  <div class=\"pe-button__content\">
    <div class=\"pe-ripple\"></div>
    <div class=\"pe-button__focus\"></div>
    <div class=\"pe-icon-button__content\">
      <div class=\"pe-icon pe-icon--regular\"></div>
    </div>
  </div></a>
</div>
"
`;

exports[`test ToolbarTitle, indented (without left icon) 1`] = `
"<div class=\"pe-toolbar\">
  <div class=\"pe-toolbar__title pe-toolbar__title--indent\">
    Toolbar with a very very very long title
  </div><a class=\"pe-button pe-icon-button\" tabindex=\"0\">
  <div class=\"pe-button__content\">
    <div class=\"pe-ripple\"></div>
    <div class=\"pe-button__focus\"></div>
    <div class=\"pe-icon-button__content\">
      <div class=\"pe-icon pe-icon--regular\">
        <div class=\"pe-svg\">
          <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
          focusable=\"false\">
            <path d=\"M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z\"></path>
          </svg>
        </div>
      </div>
    </div>
  </div></a>
</div>
"
`;
